# parallel-simulator

./: .gitignore  Cargo.toml  Makefile  README.md  task.schema.json
crates/backend/: Cargo.toml
crates/backend/src/: main.rs
crates/frontend/: Cargo.toml  index.html  style.css
crates/frontend/src/: lib.rs  main.rs  utils.rs
crates/frontend/src/components/: config_panel.rs  log_console.rs  mod.rs  report.rs  simulation_canvas.rs  toast.rs
crates/frontend/src/models/: mod.rs  simulation_report.rs  toast.rs
crates/simulator_core/: Cargo.toml
crates/simulator_core/src/: lib.rs  simulator.rs  strategy.rs
crates/simulator_core/src/models/: mod.rs  resource.rs  state.rs  step.rs  strategy.rs  thread.rs
tasks/: complex_deadlock.json  dining_philosophers.json  priority_inversion.json  producer_consumer.json  readers_writers.json  simple_race.json  starvation.json
