[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
gloo-net = { version = "0.7.0", features = ["http"] }
leptos = { version = "0.8.19", features = ["csr"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
simulator_core.workspace = true
wasm-bindgen = "0.2.125"
web-sys = { version = "0.3.102", features = ["Document", "Window"] }
